tests/paczka1/fuzzy1/65159419.err
Error in line 13: sXa A819 56,1
Error in line 15: sXa A797 -2,3
Error in line 23: wRdqib A125 55,3
Error in line 20: tsDgJNstp S28 83,3
Error in line 14: sXa A797 82,7
